# data-discovery-ai

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  .releaserc  Dockerfile  KeywordClassificationNonTechNotebook.ipynb  README.md  docker-compose.yml  entrypoint.sh  environment.yml  es_script.md  keywordClassifier.py  keyword_notebook.ipynb  log_config.yaml  mlflow_config.yaml  package-lock.json  package.json  pipeline.py  pyproject.toml  requirements.txt  startServer.sh  start_mlflow.sh
.github/environment/: central.env
.github/workflows/: build_deploy_edge.yml  ci.yml  codeql.yml  docker-build-pr.yml  release.yml  semantic-release-ci.yml  test.yml  trigger_deploy.yml
.husky/: pre-commit
data-discovery-ai/: README.md  README_a.md  README_b.md  main.py
data-discovery-ai/model/: keywordModel.py
data-discovery-ai/output/: best-trained-keyword.keras
data-discovery-ai/utils/: data_preprocessor.py
data_discovery_ai/: README_a.md  README_b.md  __init__.py  main.py  pipeline.py  routes.py  server.py  test_pipeline.py  testp.py
data_discovery_ai/agents/: baseAgent.py  deliveryClassificationAgent.py  descriptionFormattingAgent.py  downloadableLinkAgent.py  keywordClassificationAgent.py  keywordClassificationTrainer.py  linkGroupingAgent.py  supervisorAgent.py
data_discovery_ai/common/: classification_parameters.ini  constants.py  esManager.ini  es_parameters.ini  keyword_classification_parameters.ini  model_parameters.ini  parameters.json  parameters.yaml
data_discovery_ai/config/: config-dev.yaml  config-edge.yaml  config-prod.yaml  config-staging.yaml  config.py  constants.py  parameters.yaml  records_enhanced_schema.json
data_discovery_ai/core/: routes.py
data_discovery_ai/enum/: agent_enums.py  delivery_mode_enum.py
data_discovery_ai/ml/: filteringModel.py  keywordModel.py  pipeline.py  preprocessor.py  preprocessor_wip.py
data_discovery_ai/model/: ModelEntity.py  agent.py  baseAgent.py  deliveryClassificationAgent.py  descriptionFormatingModel.py  descriptionFormattingAgent.py  filteringModel.py  keywordClassificationAgent.py  keywordModel.py  linkGroupingAgent.py  linkGroupingModel.py  phrasesModel.py  supervisorAgent.py
data_discovery_ai/output/: 20241024221305-trained-keyword-epoch100-batch32.keras  pretrainedKeyword4demo.keras
data_discovery_ai/pipeline/: pipeline.py
data_discovery_ai/resources/: README.md  development.keras  experimental.keras  keyword_label.pkl
data_discovery_ai/service/: keywordClassifier.py
data_discovery_ai/temp/: labels.pkl
data_discovery_ai/utils/: agent_tools.py  api_utils.py  config_utils.py  customised_exceptions.py  data_preprocessor.py  es_connector.py  fetech_catelogue.py  ogcapi_connector.py  preprocessor.py
extras/: es_script.md  keywordClassifier.py
model/: ModelEntity.py  phrasesModel.py
notebooks/: AI_task_demo_yhu.ipynb  KeywordClassificationNonTechNotebook.ipynb  KeywordClassificationTechNotebook.ipynb  download_option_investigation.ipynb  filteringTechNotebook.ipynb  keywordClassificationNonTechNotebook.ipynb  keyword_classification_tech.ipynb  keyword_exp.ipynb  keyword_notebook.ipynb  keyword_notebook_2.ipynb  keyword_notebook_old.ipynb  non_tech_tutorial.ipynb  old_keywordClassificationNonTechnicalNotebook.ipynb  tech_tutorial.ipynb
tests/: test_hello.py  test_pipeline.py
tests/agents/: test_delivery_classification_agent.py  test_description_formatting_agent.py  test_keyword_classification_agent.py  test_link_grouping_agent.py  test_supervisor_agent.py
tests/core/: test_routes.py
tests/ml/: test_filteringModel.py  test_keywordModel.py  (+2 more)
utils/: fetech_catelogue.py
(+30 files in other folders)
