[tool.poetry]
name = "data-discovery-ai"
version = "0.1.0"
description = ""
authors = ["Viet Nguyen <vh.nguyen@utas.edu.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "24.10.0"
pre-commit = "3.8.0"
requests = "2.32.3"
fastapi = "0.115.2"
uvicorn = "0.30.6"
python-dotenv = "1.0.1"
numpy = "1.26.4"
pandas = "2.2.3"
matplotlib = "3.9.2"
scikit-learn = "1.5.2"
transformers = "4.45.2"
tqdm = "4.66.5"
tensorflow = "2.17.0"
starlette = "0.40.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
