[tool.poetry]
name = "data-discovery-ai"
version = "0.1.0"
description = ""
authors = ["Viet Nguyen <vh.nguyen@utas.edu.au>"]

[tool.poetry.dependencies]
python = "~3.10"
black = "24.10.0"
pre-commit = "3.8.0"
requests = "2.32.4"
fastapi = "0.120.1"
uvicorn = "0.30.6"
python-dotenv = "1.0.1"
numpy = "1.26.4"
pandas = "2.2.3"
matplotlib = "3.9.2"
scikit-learn = "1.5.2"
transformers = "4.53.0"
tqdm = "4.66.5"

starlette = "0.49.1"
imblearn = "^0.0"
iterative-stratification = "^0.1.9"
pyyaml = "^6.0.2"
elasticsearch = "^8.15.1"
# https://github.com/python-poetry/poetry/issues/8271#issuecomment-1712020965
tensorflow-cpu = {version = "2.17.0" }
tensorflow-io-gcs-filesystem = [
    { version = ">= 0.23.1", markers = "platform_machine!='arm64' or platform_system!='Darwin'" },
    { version = "< 0.32.0", markers = "platform_system == 'Windows'" }
]
tf-keras = "2.17.0"
openai = "^1.66.3"
h11 = "0.16.0"
ollama = "^0.4.8"
setuptools = "78.1.1"
mlflow = {extras = ["genai"], version = "3.5.1"}
protobuf = "4.25.8"
urllib3 = "2.6.0"
aiohttp = "3.12.14"
keras = "3.12.0"
structlog = "^25.5.0"
fonttools = "4.61.0"
werkzeug = "3.1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
